<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
      
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.kriolos.obiz</groupId>
    <artifactId>kriolos-obiz-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Kriolos.OBiz.Parent</name>
    <url>https://github.com/kriolos/kriolos-opos</url>

    <properties>      
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <netbeans.version>RELEASE250</netbeans.version>
        <brandingToken>kriolos_obiz</brandingToken>
        <lombok.version>1.18.38</lombok.version>
        
        <all.clusters>${project.build.directory}/${brandingToken}</all.clusters>
        <!-- Global JVM arguments that Surefire is forced to append to every single fork -->
        <argLine>
            -DTopSecurityManager.disable=true
            -Dsurefire.enableProcessChecker=false
            -Djdk.net.URLClassPath.disableClassPathURLCheck=true
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.util=ALL-UNNAMED
            --add-opens java.base/java.net=ALL-UNNAMED
            --add-opens java.desktop/java.awt=ALL-UNNAMED
        </argLine>
    </properties>
    
    <modules>
        <module>kriolos-pos</module>
        <module>kriolos-obiz-suite</module>
        <module>kriolos-obiz-libs</module>
        <module>kriolos-opos-nbm</module>
        
        <module>branding</module>
        <module>application</module>
    </modules>
    
    <inceptionYear>2022</inceptionYear>
    
    <organization>
        <name>KriolOS</name>
        <url>https://kriolos.github.io</url>
    </organization>
      
    <distributionManagement>
        <site>
            <id>kriolos.github.io/kriolos-opos/updatesite</id>
        </site>
    </distributionManagement>
      
    
    <scm>
        <connection>scm:git:https://github.com/kriolos/kriolos-opos.git</connection>
        <developerConnection>scm:git:https://github.com/kriolos/kriolos-opos.git</developerConnection>
    </scm>
      
    
    <issueManagement>
        <system>Github</system>
        <url>https://github.com/kriolos/kriolos-opos/issues</url>
    </issueManagement>
      
    
    <ciManagement>
        <system>Github</system>
        <url>https://github.com/kriolos/kriolos-opos/actions</url>
    </ciManagement>
      
    
    <licenses>
        <license>
            <name>GNU General Public License, version 3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>
      
    
    <developers>
        <developer> 
            <id>poolborges</id>
            <name>Paulo Borges</name>
            <organization>KriolOS</organization>
            <organizationUrl>https://kriolos.github.io</organizationUrl>
        </developer>
    </developers>
      
    <build>
        <pluginManagement>
            <plugins>   
                <plugin>   
                    <groupId>org.apache.netbeans.utilities</groupId>
                    <artifactId>nbm-maven-plugin</artifactId>
                    <version>14.5</version>
                    <extensions>true</extensions>
                    <configuration>   
                        <brandingToken>${brandingToken}</brandingToken>
                        <cluster>${brandingToken}</cluster>
                        <licenseName>GNU General Public License, version 3</licenseName>
                        <licenseFile>LICENSE</licenseFile>
                        <author>KriolOS</author>
                        <homePageUrl>https://kriolos.github.io/kriolos-obiz/</homePageUrl>
                    </configuration>
                </plugin>
                        
                <plugin>  
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-Xlint</arg>
                            <!-- Forces modern JDKs to scan the classpath for annotation processors -->
                            <arg>-proc:full</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                    
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.6</version>
                    <configuration>
                        <!-- If fail uncomment to pass the build
                        <skipTests>true</skipTests>
                        -->
                                  
                        <systemPropertyVariables>
                            <all.clusters>${all.clusters}</all.clusters>
                            <branding.token>${brandingToken}</branding.token>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.netbeans.cluster</groupId>
                <artifactId>platform</artifactId>
                <version>${netbeans.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <profiles>
        <!-- Profile automatically triggered for Java versions that support the Security Manager -->
        <profile>
            <id>legacy-security-manager</id>
            <activation>
                <jdk>[17,24)</jdk> <!-- Matches Java 17, 18, 19, 20, 21, 22, 23 (Strictly less than 24) -->
            </activation>
            <properties>
                <!-- Appends the required security manager flag to the base argLine -->
                <argLine>
                    -Djava.security.manager=allow
                    -Dsurefire.enableProcessChecker=false
                    -Djdk.net.URLClassPath.disableClassPathURLCheck=true
                    --add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.util=ALL-UNNAMED
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.desktop/java.awt=ALL-UNNAMED
                </argLine>
            </properties>
        </profile>
    </profiles>
  
</project>
